--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "lru-cache": "~2.3.1"
   },
   "devDependencies": {
+    "chai": "1.7.x",
     "grunt": "0.4.x",
     "grunt-contrib-jshint": "0.6.x",
+    "grunt-mocha-test": "0.6.x",
     "matchdep": "*"
   }
 }
