--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lru-cache": "~2.3.1"
   },
   "devDependencies": {
+    "async": "0.2.x",
     "chai": "1.7.x",
     "grunt": "0.4.x",
     "grunt-contrib-jshint": "0.6.x",
